--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,4 +1,2 @@
 // app global css in SCSS form
-body.body--dark {
-  background: red;
-}
+@import url(https://at.alicdn.com/t/font_3364237_p2i3abeea9.css);
